@@ -464,9 +464,182 @@ public class ZGCExample {
 | 回收内存 | -           | -           | 0M (0%)        | 3M (0%)      | -           | -           |
 </details>
 
+## 3、其他触发条件得到的日志（修改了程序） //todo
 
-## 3、垃圾回收器特点的体现
-### 3.1 垃圾回收过程中的暂停
+<details>
+    <summary>修改后的程序</summary>
+
+```java
+
+public class IdleGCTest {
+
+    public static void main(String[] args) {
+        System.out.println("Starting Idle GC Test...");
+
+        // 分配大量对象以填充堆内存
+        for (int i = 0; i < 100_000; i++) {
+            byte[] array = new byte[1024 * 1024]; // 1MB
+        }
+
+        System.out.println("Finished allocating memory. Waiting for Idle GC...");
+        System.gc();
+        try {
+            // 保持空闲状态，等待Idle GC触发
+            Thread.sleep(30000); // 30秒
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+        System.out.println("Test finished.");
+    }
+}
+
+```
+</details>
+<details>
+    <summary>修改的jvm参数</summary>
+
+``` log
+-XX:+UseZGC
+-XX:ZCollectionInterval=15
+-Xlog:gc*:file=./gc.log
+```
+
+
+</details>
+
+<details>
+    <summary>新增加的日志截取</summary>
+
+``` log
+[13.786s][info][gc,start    ] GC(46) Garbage Collection (System.gc())
+[13.787s][info][gc,task     ] GC(46) Using 2 workers
+[13.787s][info][gc,phases   ] GC(46) Pause Mark Start 0.007ms
+[13.802s][info][gc,phases   ] GC(46) Concurrent Mark 15.370ms
+[13.802s][info][gc,phases   ] GC(46) Pause Mark End 0.010ms
+[13.803s][info][gc,phases   ] GC(46) Concurrent Mark Free 0.001ms
+[13.804s][info][gc,phases   ] GC(46) Concurrent Process Non-Strong References 0.876ms
+[13.804s][info][gc,phases   ] GC(46) Concurrent Reset Relocation Set 0.000ms
+[13.805s][info][gc,phases   ] GC(46) Concurrent Select Relocation Set 1.803ms
+[13.806s][info][gc,phases   ] GC(46) Pause Relocate Start 0.005ms
+[13.806s][info][gc,phases   ] GC(46) Concurrent Relocate 0.124ms
+[13.806s][info][gc,load     ] GC(46) Load: 0.00/0.00/0.00
+[13.806s][info][gc,mmu      ] GC(46) MMU: 2ms/97.7%, 5ms/98.8%, 10ms/99.2%, 20ms/99.6%, 50ms/99.8%, 100ms/99.9%
+[13.806s][info][gc,marking  ] GC(46) Mark: 2 stripe(s), 1 proactive flush(es), 1 terminate flush(es), 0 completion(s), 0 continuation(s) 
+[13.806s][info][gc,marking  ] GC(46) Mark Stack Usage: 32M
+[13.806s][info][gc,nmethod  ] GC(46) NMethods: 344 registered, 0 unregistered
+[13.806s][info][gc,metaspace] GC(46) Metaspace: 1M used, 1M committed, 1032M reserved
+[13.806s][info][gc,ref      ] GC(46) Soft: 85 encountered, 0 discovered, 0 enqueued
+[13.806s][info][gc,ref      ] GC(46) Weak: 116 encountered, 1 discovered, 0 enqueued
+[13.806s][info][gc,ref      ] GC(46) Final: 0 encountered, 0 discovered, 0 enqueued
+[13.806s][info][gc,ref      ] GC(46) Phantom: 184 encountered, 180 discovered, 0 enqueued
+[13.806s][info][gc,reloc    ] GC(46) Small Pages: 3 / 6M, Empty: 0M, Relocated: 0M, In-Place: 0
+[13.806s][info][gc,reloc    ] GC(46) Medium Pages: 1 / 32M, Empty: 0M, Relocated: 0M, In-Place: 0
+[13.806s][info][gc,reloc    ] GC(46) Large Pages: 0 / 0M, Empty: 0M, Relocated: 0M, In-Place: 0
+[13.806s][info][gc,reloc    ] GC(46) Forwarding Usage: 0M
+[13.806s][info][gc,heap     ] GC(46) Min Capacity: 8M(0%)
+[13.806s][info][gc,heap     ] GC(46) Max Capacity: 4072M(100%)
+[13.806s][info][gc,heap     ] GC(46) Soft Max Capacity: 4072M(100%)
+[13.806s][info][gc,heap     ] GC(46)                Mark Start          Mark End        Relocate Start      Relocate End           High               Low         
+[13.806s][info][gc,heap     ] GC(46)  Capacity:     3776M (93%)        3776M (93%)        3776M (93%)        3776M (93%)        3776M (93%)        3776M (93%)    
+[13.806s][info][gc,heap     ] GC(46)      Free:     4034M (99%)        4034M (99%)        4034M (99%)        4034M (99%)        4034M (99%)        4034M (99%)    
+[13.806s][info][gc,heap     ] GC(46)      Used:       38M (1%)           38M (1%)           38M (1%)           38M (1%)           38M (1%)           38M (1%)     
+[13.806s][info][gc,heap     ] GC(46)      Live:         -                 4M (0%)            4M (0%)            4M (0%)             -                  -          
+[13.806s][info][gc,heap     ] GC(46) Allocated:         -                 0M (0%)            0M (0%)            0M (0%)             -                  -          
+[13.806s][info][gc,heap     ] GC(46)   Garbage:         -                33M (1%)           33M (1%)           33M (1%)             -                  -          
+[13.806s][info][gc,heap     ] GC(46) Reclaimed:         -                  -                 0M (0%)            0M (0%)             -                  -          
+[13.806s][info][gc          ] GC(46) Garbage Collection (System.gc()) 38M(1%)->38M(1%)
+[20.070s][info][gc,stats    ] === Garbage Collection Statistics =======================================================================================================================
+[20.071s][info][gc,stats    ]                                                              Last 10s              Last 10m              Last 10h                Total
+[20.071s][info][gc,stats    ]                                                              Avg / Max             Avg / Max             Avg / Max             Avg / Max
+[20.071s][info][gc,stats    ]   Collector: Garbage Collection Cycle                     15.002 / 19.739       14.516 / 29.018       14.516 / 29.018       14.516 / 29.018      ms
+[20.071s][info][gc,stats    ]  Contention: Mark Segment Reset Contention                     0 / 0                 0 / 2                 0 / 2                 0 / 2           ops/s
+[20.071s][info][gc,stats    ]  Contention: Mark SeqNum Reset Contention                      0 / 0                 0 / 2                 0 / 2                 0 / 2           ops/s
+[20.071s][info][gc,stats    ]    Critical: Allocation Stall                                  0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]    Critical: Allocation Stall                              0.000 / 0.000         0.000 / 0.000         0.000 / 0.000         0.000 / 0.000       ms
+[20.071s][info][gc,stats    ]    Critical: GC Locker Stall                                   0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]    Critical: GC Locker Stall                               0.000 / 0.000         0.000 / 0.000         0.000 / 0.000         0.000 / 0.000       ms
+[20.071s][info][gc,stats    ]    Critical: Relocation Stall                                  0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]    Critical: Relocation Stall                              0.000 / 0.000         0.000 / 0.000         0.000 / 0.000         0.000 / 0.000       ms
+[20.071s][info][gc,stats    ]      Memory: Allocation Rate                                1018 / 10184          5198 / 13482          5198 / 13482          5198 / 13482       MB/s
+[20.071s][info][gc,stats    ]      Memory: Out Of Memory                                     0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]      Memory: Page Cache Flush                                  0 / 0                 0 / 0                 0 / 0                 0 / 0           MB/s
+[20.071s][info][gc,stats    ]      Memory: Page Cache Hit L1                                33 / 330             163 / 436             163 / 436             163 / 436         ops/s
+[20.071s][info][gc,stats    ]      Memory: Page Cache Hit L2                                 0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]      Memory: Page Cache Hit L3                                 0 / 0                 0 / 14                0 / 14                0 / 14          ops/s
+[20.071s][info][gc,stats    ]      Memory: Page Cache Miss                                   0 / 0                 5 / 44                5 / 44                5 / 44          ops/s
+[20.071s][info][gc,stats    ]      Memory: Uncommit                                          0 / 0                 0 / 0                 0 / 0                 0 / 0           MB/s
+[20.071s][info][gc,stats    ]      Memory: Undo Object Allocation Failed                     0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]      Memory: Undo Object Allocation Succeeded                  0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]      Memory: Undo Page Allocation                              0 / 0                 0 / 0                 0 / 0                 0 / 0           ops/s
+[20.071s][info][gc,stats    ]       Phase: Concurrent Mark                              10.287 / 15.606        8.379 / 15.943        8.379 / 15.943        8.379 / 15.943      ms
+[20.071s][info][gc,stats    ]       Phase: Concurrent Mark Continue                      0.000 / 0.000         0.000 / 0.000         0.000 / 0.000         0.000 / 0.000       ms
+[20.071s][info][gc,stats    ]       Phase: Concurrent Mark Free                          0.001 / 0.001         0.001 / 0.003         0.001 / 0.003         0.001 / 0.003       ms
+[20.071s][info][gc,stats    ]       Phase: Concurrent Process Non-Strong References      0.912 / 1.078         0.952 / 1.417         0.952 / 1.417         0.952 / 1.417       ms
+[20.071s][info][gc,stats    ]       Phase: Concurrent Relocate                           0.641 / 1.219         1.472 / 4.077         1.472 / 4.077         1.472 / 4.077       ms
+[20.071s][info][gc,stats    ]       Phase: Concurrent Reset Relocation Set               0.001 / 0.001         0.001 / 0.004         0.001 / 0.004         0.001 / 0.004       ms
+[20.071s][info][gc,stats    ]       Phase: Concurrent Select Relocation Set              1.839 / 1.888         2.277 / 10.574        2.277 / 10.574        2.277 / 10.574      ms
+[20.071s][info][gc,stats    ]       Phase: Pause Mark End                                0.011 / 0.014         0.013 / 0.045         0.013 / 0.045         0.013 / 0.045       ms
+[20.071s][info][gc,stats    ]       Phase: Pause Mark Start                              0.007 / 0.008         0.009 / 0.038         0.009 / 0.038         0.009 / 0.038       ms
+[20.071s][info][gc,stats    ]       Phase: Pause Relocate Start                          0.006 / 0.006         0.008 / 0.046         0.008 / 0.046         0.008 / 0.046       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Classes Purge                      0.121 / 0.131         0.097 / 0.171         0.097 / 0.171         0.097 / 0.171       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Classes Unlink                     0.319 / 0.415         0.369 / 0.695         0.369 / 0.695         0.369 / 0.695       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Mark                               6.843 / 15.079        6.402 / 15.489        6.402 / 15.489        6.402 / 15.489      ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Mark Try Flush                     0.124 / 0.157         0.112 / 0.244         0.112 / 0.244         0.112 / 0.244       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Mark Try Terminate                 2.948 / 13.777        2.001 / 13.777        2.001 / 13.777        2.001 / 13.777      ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent References Enqueue                 0.000 / 0.000         0.000 / 0.005         0.000 / 0.005         0.000 / 0.005       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent References Process                 0.125 / 0.174         0.097 / 0.174         0.097 / 0.174         0.097 / 0.174       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Roots ClassLoaderDataGraph         0.042 / 0.081         0.080 / 0.398         0.080 / 0.398         0.080 / 0.398       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Roots CodeCache                    0.000 / 0.000         0.000 / 0.000         0.000 / 0.000         0.000 / 0.000       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Roots JavaThreads                  0.204 / 0.303         0.257 / 0.777         0.257 / 0.777         0.257 / 0.777       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Roots OopStorageSet                0.008 / 0.013         0.015 / 0.058         0.015 / 0.058         0.015 / 0.058       ms
+[20.071s][info][gc,stats    ]    Subphase: Concurrent Weak Roots OopStorageSet           0.102 / 0.155         0.191 / 0.464         0.191 / 0.464         0.191 / 0.464       ms
+[20.071s][info][gc,stats    ]    Subphase: Pause Mark Try Complete                       0.000 / 0.000         0.000 / 0.000         0.000 / 0.000         0.000 / 0.000       ms
+[20.071s][info][gc,stats    ]      System: Java Threads                                     13 / 13               13 / 14               13 / 14               13 / 14          threads
+[20.071s][info][gc,stats    ] =========================================================================================================================================================
+[28.867s][info][gc,start    ] GC(47) Garbage Collection (Timer)
+[28.867s][info][gc,task     ] GC(47) Using 2 workers
+[28.868s][info][gc,phases   ] GC(47) Pause Mark Start 0.007ms
+[28.883s][info][gc,phases   ] GC(47) Concurrent Mark 15.099ms
+[28.883s][info][gc,phases   ] GC(47) Pause Mark End 0.012ms
+[28.883s][info][gc,phases   ] GC(47) Concurrent Mark Free 0.001ms
+[28.884s][info][gc,phases   ] GC(47) Concurrent Process Non-Strong References 0.909ms
+[28.884s][info][gc,phases   ] GC(47) Concurrent Reset Relocation Set 0.000ms
+[28.886s][info][gc,phases   ] GC(47) Concurrent Select Relocation Set 1.788ms
+[28.886s][info][gc,phases   ] GC(47) Pause Relocate Start 0.005ms
+[28.887s][info][gc,phases   ] GC(47) Concurrent Relocate 0.125ms
+[28.887s][info][gc,load     ] GC(47) Load: 0.00/0.00/0.00
+[28.887s][info][gc,mmu      ] GC(47) MMU: 2ms/97.7%, 5ms/98.8%, 10ms/99.2%, 20ms/99.6%, 50ms/99.8%, 100ms/99.9%
+[28.887s][info][gc,marking  ] GC(47) Mark: 2 stripe(s), 1 proactive flush(es), 1 terminate flush(es), 0 completion(s), 0 continuation(s) 
+[28.887s][info][gc,marking  ] GC(47) Mark Stack Usage: 32M
+[28.887s][info][gc,nmethod  ] GC(47) NMethods: 344 registered, 0 unregistered
+[28.887s][info][gc,metaspace] GC(47) Metaspace: 1M used, 1M committed, 1032M reserved
+[28.887s][info][gc,ref      ] GC(47) Soft: 85 encountered, 0 discovered, 0 enqueued
+[28.887s][info][gc,ref      ] GC(47) Weak: 116 encountered, 1 discovered, 0 enqueued
+[28.887s][info][gc,ref      ] GC(47) Final: 0 encountered, 0 discovered, 0 enqueued
+[28.887s][info][gc,ref      ] GC(47) Phantom: 184 encountered, 180 discovered, 0 enqueued
+[28.887s][info][gc,reloc    ] GC(47) Small Pages: 3 / 6M, Empty: 0M, Relocated: 0M, In-Place: 0
+[28.887s][info][gc,reloc    ] GC(47) Medium Pages: 1 / 32M, Empty: 0M, Relocated: 0M, In-Place: 0
+[28.887s][info][gc,reloc    ] GC(47) Large Pages: 0 / 0M, Empty: 0M, Relocated: 0M, In-Place: 0
+[28.887s][info][gc,reloc    ] GC(47) Forwarding Usage: 0M
+[28.887s][info][gc,heap     ] GC(47) Min Capacity: 8M(0%)
+[28.887s][info][gc,heap     ] GC(47) Max Capacity: 4072M(100%)
+[28.887s][info][gc,heap     ] GC(47) Soft Max Capacity: 4072M(100%)
+[28.887s][info][gc,heap     ] GC(47)                Mark Start          Mark End        Relocate Start      Relocate End           High               Low         
+[28.887s][info][gc,heap     ] GC(47)  Capacity:     3776M (93%)        3776M (93%)        3776M (93%)        3776M (93%)        3776M (93%)        3776M (93%)    
+[28.887s][info][gc,heap     ] GC(47)      Free:     4034M (99%)        4034M (99%)        4034M (99%)        4034M (99%)        4034M (99%)        4034M (99%)    
+[28.887s][info][gc,heap     ] GC(47)      Used:       38M (1%)           38M (1%)           38M (1%)           38M (1%)           38M (1%)           38M (1%)     
+[28.887s][info][gc,heap     ] GC(47)      Live:         -                 4M (0%)            4M (0%)            4M (0%)             -                  -          
+[28.887s][info][gc,heap     ] GC(47) Allocated:         -                 0M (0%)            0M (0%)            0M (0%)             -                  -          
+[28.887s][info][gc,heap     ] GC(47)   Garbage:         -                33M (1%)           33M (1%)           33M (1%)             -                  -          
+[28.887s][info][gc,heap     ] GC(47) Reclaimed:         -                  -                 0M (0%)            0M (0%)             -                  -          
+[28.887s][info][gc          ] GC(47) Garbage Collection (Timer) 38M(1%)->38M(1%)
+```
+
+</details>
+
+## 4、垃圾回收器特点的体现
+### 4.1 垃圾回收过程中的暂停
 为了能更好的对比，没有删除其他的日志
 
 | 基础日志分析     |                                                                                                            |
@@ -488,13 +661,16 @@ public class ZGCExample {
 | Phase-Pause Mark End（再次标记）       | 在并发标记阶段之后，ZGC会进行再次标记，这个阶段也是STW的。它的目的是重新标记那些在并发标记阶段可能发生变化的对象。这个阶段的暂停时间通常也很短。<br>                                                                                        |
 | Phase-Pause Relocate Start（初始转移） | 在这个阶段，ZGC会开始转移阶段，这也是一个STW暂停。在这个阶段，ZGC会处理所有存活的对象，将它们复制到新的内存地址上。虽然内存分配通常耗时非常短，但对象成员变量的复制耗时可能较长，因为复制耗时与存活对象数量和对象复杂度成正比。对象越复杂，复制耗时越长。这个阶段的耗时可能会比前两个阶段长，因为它需要处理所有存活的对象。<br> |
 
-### 3.2 垃圾回收策略
-
+### 4.2 垃圾回收触发
+#### 4.2.1之前的日志中出现过的触发条件
 | 日志                                           | 阶段 | 解释 |
 |----------------------------------------------|----|----|
 | GC(0) Garbage Collection (Warmup)<br>        | 预热垃圾回收   |  在 JVM 启动时进行的第一次垃圾回收，用于初始化和预热内存管理系统  |
 | GC(3) Garbage Collection (Proactive)<br>         |  主动垃圾回收  |  由 ZGC 主动触发，以确保内存使用保持在合理范围内，避免内存不足的情况  |
 | GC(4) Garbage Collection (Allocation Rate) <br>  |  分配率垃圾回收  |  当对象分配速率过高时触发，以防止内存快速耗尽  |
 | GC(10) Garbage Collection (Allocation Stall)<br> |  分配停滞垃圾回收  |  当内存分配出现停滞（例如没有足够的空闲内存页面）时触发，以确保内存分配能够继续进行  |
+
+
+
 
 # 5、调优 //todo
